--- a/committee/ce.html
+++ b/committee/ce.html
@@ -39,7 +39,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="ce.html">Community Engagement</a> <!-- change active page -->
+                <a href="ce.html" class="active">Community Engagement</a> <!-- change active page -->
                 <a href="legislative.html">Legislative</a>
                 <a href="tech.html">Technology</a>
             </div>
@@ -340,7 +340,7 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 15vw;
+        margin-bottom: 10vw;
         width: 60%;
         left: 15%;
         
@@ -411,9 +411,9 @@
         padding-top: 38vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 200;
+        font-weight: 400;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.2vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -472,9 +472,9 @@
         padding-top: 35vw;
         padding-left: 6vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 200;
+        font-weight: 400;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.2vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -531,9 +531,9 @@
         padding-top: 38vw;
         padding-left: 3vw;
         font-family: sofia-pro, sans-serif;
-        font-weight: 200;
+        font-weight: 400;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.2vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
