--- a/committee/tech.html
+++ b/committee/tech.html
@@ -68,7 +68,7 @@
 
     <div id="second-section">
         <div class="inner">
-            <img src="tech/sage-pierone-pfp.jpg" align="LEFT" class="imgresponsive"/> 
+            <img src="tech/sage-pierone-pfp.png" align="LEFT" class="imgresponsive"/> 
             <div class="bordertext">
                 <h1>Sage Pierone</h1>
                 <h2>Committee Chair</h2><p style="font-size:1.75vw;">Sage Pierone is a sophomore studying Computer Science with a minor in Race and Law. He is from Los Angeles and is a LA Posse scholar, which is where he and Chaka first met. He hopes to work in the computer science field with a focus on race and equality, and has a passion for artificial intelligence and dismantling data bias in machine learning. In his free time, he can be found on the soccer field, skateboarding, or playing Super Smash Bros Ultimate.</p>
@@ -83,7 +83,7 @@
         </div>
         <div class="associates">
             <a href="#" class="sixth brandii"> 
-                <img src="tech/brandii-warden-pfp.jpg"/> 
+                <img src="tech/brandii-warden-pfp.png"/> 
                 <h2>Brandii Warden</h2> 
                 <p>
                 Brandii is a sophomore pursuing a major in Computer Science and minors in African American Studies and Data Science. She is a technology associate for the Technology Committee within the Office of ASUC Senator Chaka Tellem, aiming to help create a more welcoming and unified campus for underrepresented communities. She is passionate about tackling racial inequity and inequality in technology, specifically in both the level of inclusivity in the tech industry, as well as in algorithm bias/oppression. She is most excited about topics in machine learning and artificial intelligence. Brandii also loves going on hikes, doing yoga, and watching documentaries on Netflix.
@@ -91,7 +91,7 @@
             </a>
 
             <a href="#" class="sixth gianna"> <!-- rename -->
-                <img src="tech/gianna-beasley-pfp.jpg"/> 
+                <img src="tech/gianna-beasley-pfp.png"/> 
                 <h2>Gianna Beasley</h2> 
                 <p>
                 Gianna Beasley is a Tech Committee Associate for ASUC Senator Chaka Tellem’s office. She is a freshman who intends on either majoring in Psychology or Business. Specializing in both the 400m and 800m, Gianna is a part of the Track & Field team here at Berkeley. She is from South Pasadena, California and loves the SoCal weather. Gianna is passionate about forensic psychology and one day hopes to be a practicing Forensic Psychologist. In her free time, she can be found watching Criminal Minds, Forensic Files, or simply listening to a true crime podcast. She also considers herself to be a poké enthusiast, and enjoys trying new poké places when exploring new cities. Gianna loves meeting new people, and is excited to do so here at Berkeley.
@@ -99,7 +99,7 @@
             </a>
 
             <a href="#" class="sixth ines"> 
-                <img src="tech/ines-yang-pfp.jpeg"/> 
+                <img src="tech/ines-yang-pfp.png"/> 
                 <h2>Ines Yang</h2>
                 <p>
                 I’m Ines, and my major is Sustainable Environmental Design. I’m really into embrodiering and currently experimenting with digital art/ graphic design in my free time. I joined Senator Tellem’s office because I wanted to expand my awareness and use my skills for something bigger than myself. I think there is something powerful in creating art that can communicate ideas to others. I’m currently learning Adobe Illustrator and Photoshop, and I hope to elevate our social media platform and presence in the future through short animations or even movies!
@@ -110,7 +110,7 @@
 
     <div id="intern-section">
         <div class="intern">
-            <img src="tech/alex-parra-pfp.jpg" align="CENTER" class="internresponsive"/>
+            <img src="tech/alex-parra-pfp.png" align="CENTER" class="internresponsive"/>
             <h2>TECH Intern</h2> 
             <h3>Alex Parra</h3> 
             <p>Alex Parra is a freshman studying Computer Science, with a possible minor in Chicano Studies. Coming from LA, Alex is excited to work towards equality for all. As a Mexican American, Alex is deeply invested in ensuring the Latine community is represented in the ASUC through social media and beyond. You can usually catch Alex taking photos on campus, running around Berkeley or sleeping during lecture.</p> 
