--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="topnav" id="myTopnav">
-        <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
+        <img href="index.html" class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="index.html" class="active">Home</a>
         <a href="chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
