--- a/committee/ce.html
+++ b/committee/ce.html
@@ -50,7 +50,7 @@
 
     <div id="first-section">
         <div class="container">
-            <img src="ce/ce-logo.png" align="CENTER" class="logoresponsive"/> <!-- rename -->
+            <img src="ce-logo.png" align="CENTER" class="logoresponsive"/> <!-- rename -->
             <h1>
                 Community Engagement 
             </h1> <!-- rename -->
@@ -197,7 +197,7 @@
 
     #mission-section p {
         position: relative;
-        top: 2vw;
+        top: 0.75vw;
         left: 12vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
@@ -328,7 +328,7 @@
         display: inline-grid;
         grid-template-columns: auto auto auto;
         width: 100%;
-        padding-bottom: 120px;
+        padding-bottom: 5vw;
         background-color: rgba(0, 0, 0, 0);
         background: #FFFFF;
 
