--- a/committee/ej.html
+++ b/committee/ej.html
@@ -50,7 +50,7 @@
 
     <div id="first-section">
         <div class="container">
-            <img src="ej/ej-logo.png" align="CENTER" class="logoresponsive"/> 
+            <img src="ej-logo.png" align="CENTER" class="logoresponsive"/> 
             <h1>Environmental Justice</h1>
         
         </div>
@@ -265,7 +265,7 @@
 
     #mission-section p {
         position: relative;
-        top: 2vw;
+        top: 0.75vw;
         left: 12vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
@@ -395,7 +395,7 @@
         display: inline-grid;
         grid-template-columns: auto auto auto;
         width: 100%;
-        padding-bottom: 120px;
+        padding-bottom: 5vw;
         background-color: rgba(0, 0, 0, 0);
         background: #FFFFF;
 
