--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -50,7 +50,7 @@
 
     <div id="first-section">
         <div class="container">
-            <img src="leg/legislative-logo.png" align="CENTER" class="logoresponsive"/>
+            <img src="legislative-logo.png" align="CENTER" class="logoresponsive"/>
             <h1>
                 Legislative
             </h1>
@@ -116,7 +116,7 @@
             </a>
 
             <a href="#" class="sixth cyn"> 
-                <img src="leg/cyngomez.png"/> 
+                <img src="cyngomez.png"/> 
                 <h2>Cyn Gomez</h2>
                 <h3> Associate </h3>
                 <p>
@@ -282,7 +282,7 @@
 
     #mission-section p {
         position: relative;
-        top: 2vw;
+        top: 0.75vw;
         left: 12vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
@@ -415,7 +415,7 @@
         display: inline-grid;
         grid-template-columns: auto auto;
         width: 100%;
-        padding-bottom: 120px;
+        padding-bottom: 5vw;
         background-color: rgba(0, 0, 0, 0);
         background: #FFFFF;
 
