--- a/committee/tech.html
+++ b/committee/tech.html
@@ -50,7 +50,7 @@
 
     <div id="first-section">
         <div class="container">
-            <img src="tech/tech-logo.png" align="CENTER" class="logoresponsive"/> 
+            <img src="tech-logo.png" align="CENTER" class="logoresponsive"/> 
             <h1>
                 Technology 
             </h1> 
@@ -264,7 +264,7 @@
 
     #mission-section p {
         position: relative;
-        top: 2vw;
+        top: 0.75vw;
         left: 12vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
@@ -394,7 +394,7 @@
         display: inline-grid;
         grid-template-columns: auto auto auto;
         width: 100%;
-        padding-bottom: 120px;
+        padding-bottom: 5vw;
         background-color: rgba(0, 0, 0, 0);
         background: #FFFFF;
 
