--- a/committee/apo.html
+++ b/committee/apo.html
@@ -439,7 +439,7 @@
         grid-column: span 1;
         align-content: center;
         border-radius: 10%;
-        margin-top: 10px;
+        margin-top: 0vw;
         margin-bottom: 25vw;
         width: 45%;
         left: 29%;
