--- a/committee/apo.html
+++ b/committee/apo.html
@@ -12,6 +12,7 @@
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="../index.html">Home</a>
+        <a href="../meetchaka.html">Meet Chaka</a>
         <a href="../chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
@@ -389,14 +390,11 @@
     
 
 
-   
-
-
      #second-section .shape {
         position: absolute;
-        left: 10vw;
-        height: 90%;
-        width: 80%;
+        left: 2.5vw;
+        height: 80%;
+        width: 95%;
         background-color: #070F2E;
         border-radius: 0px;
         margin-bottom: 10px;
@@ -410,7 +408,7 @@
         position: relative;
         display: inline-grid;
         grid-template-columns: auto;
-        top: -3vw;
+        top: -7vw;
         width: 100%;
         padding: 0px;
         background-color: rgba(0, 0, 0, 0);
@@ -419,7 +417,7 @@
         text-align: center;
         font-family: sofia-pro, sans-serif;
         font-style: normal;
-        font-size: 2.25em;
+        font-size: 2.5em;
         font-weight: 800;
     }
 
@@ -443,6 +441,7 @@
         margin-bottom: 25vw;
         width: 45%;
         left: 29%;
+        top: -10%;
         
     }
 
