--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="topnav" id="myTopnav">
         <img href="index.html" class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="index.html" class="active">Home</a>
+        <a href="meetchaka.html">Meet Chaka</a>
         <a href="chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
@@ -74,29 +75,29 @@
 	    </div>
         <div class="toprow">
 	        <a href="committee/ce.html" class="sixth ce">
-	            <img src="committee/ce/ce-logo.png" class="segmentsresponsive"/>
+	            <img src="committee/ce-logo.png" class="segmentsresponsive"/>
 		        <p>Community Engagement</p>
 		    </a>
 		    <a href="committee/apo.html" class="sixth apo">
-		        <img src="committee/apo/apo-logo.png" class="segmentsresponsive"/>
+		        <img src="committee/apo-logo.png" class="segmentsresponsive"/>
 	            <p>Academic & Professional Opportunities</p>
 	        </a>
 	        <a href="committee/ej.html" class="sixth ej">
-		        <img src="committee/ej/ej-logo.png" class="segmentsresponsive"/>
+		        <img src="committee/ej-logo.png" class="segmentsresponsive"/>
 	            <p>Environmental Justice</p>
 		      </a>
 	    </div>
 		<div class="bottomrow">
 	        <a href="committee/cc.html" class="sixthtwo cc">
-		        <img src="committee/cc/cc-logo.png" class="segmentsresponsive"/>
+		        <img src="committee/cc-logo.png" class="segmentsresponsive"/>
 		        <p>Campus Climate</p>
 		    </a>
 		    <a href="committee/tech.html" class="sixthtwo tech">
-		        <img src="committee/tech/tech-logo.png" class="segmentsresponsive"/>
+		        <img src="committee/tech-logo.png" class="segmentsresponsive"/>
 		        <p>Technology</p>
 		    </a>
 		    <a href="committee/legislative.html" class="sixthtwo leg">
-		        <img src="committee/leg/legislative-logo.png" class="segmentsresponsive"/>
+		        <img src="committee/legislative-logo.png" class="segmentsresponsive"/>
 		        <p>Legislative</p>
 		    </a>
 		</div>
