--- a/meetchaka.html
+++ b/meetchaka.html
@@ -11,8 +11,8 @@
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="index.html">Home</a>
-        <a href="meetchaka.html">Meet Chaka</a>
-        <a href="chiefofstaff.html" class="active">Chief of Staff</a>
+        <a href="meetchaka.html" class="active">Meet Chaka</a>
+        <a href="chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
                 <i class="fa fa-caret-down"></i>
@@ -50,7 +50,7 @@
     <div id="first-section">
         <div class="container">
             <h1>
-                Chief of Staff
+                Chaka Tellem
             </h1>
             
         </div>
@@ -59,11 +59,10 @@
 
     
     <div id="second-section">
-        <div class="shape"></div>
         <div class="inner">
             <img src="profiles/moorea_outline.png" align="LEFT" class="imgresponsive"/>
             <div class="bordertext">
-                <h2>Moorea Benmosche</h2> <h3> Chief of Staff</h3><p style="font-size:1.75vw;">Moorea is a sophomore pursuing her B.A. in Urban Studies with a minor in Public Policy. Born and raised in Los Angeles, she has always enjoyed exploring cities and studying the socioeconomic implications of the design of the built environment. In the future, she aims to change the exclusive nature of urban policy to provide more resources for the populations that developers neglect. She loves airports, city views, and the number 4.</p>
+                <h1>Moorea Benmosche</h1> <h2> Chief of Staff</h2><p style="font-size:1.75vw;">Moorea is a sophomore pursuing her B.A. in Urban Studies with a minor in Public Policy. Born and raised in Los Angeles, she has always enjoyed exploring cities and studying the socioeconomic implications of the design of the built environment. In the future, she aims to change the exclusive nature of urban policy to provide more resources for the populations that developers neglect. She loves airports, city views, and the number 4.</p>
             </div>
 
         </div>
@@ -200,84 +199,79 @@
 
 
 #second-section {
-        background-color: #fcf6f2;
-    }
+    color: black;
+    position: relative;
+    height: auto;
+    padding: 0;
+}
 
-    .imgresponsive {
-        position: relative;
-        padding: 0vw;
-        width: 30%;
-        left: 40vw;
-        top: 7vw;
-        height: auto;
-    }
+.imgresponsive {
+  padding: 5vw;
+  padding-right: 0px;
+  width: 25%;
+  height: auto;
+}
 
-    #second-section .inner {
-        position: relative;
-        display: inline-block;
-        width: 100%;
-    }
+#second-section .inner {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
 
-    #second-section h2 {
-        top: -20vw;
-        left: 6vw;
-        position: relative;
-        max-width: calc(100% - 40px);
-        width: calc(100% - 40px);
-        display: inline;
-        font-family: montserrat, sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 3vw;
-        color: white;
-        text-align: center;
-        padding: 2vw;
-        padding-top: 1vw;
-        background-color: #48667E;
-    }
+#second-section h1 {
+    margin: 10px;
+    top: 5vw;
+    left: 10vw;
+    position: relative;
+    max-width: calc(100% - 40px);
+    width: calc(100% - 40px);
+    display: inline;
+    font-family: montserrat, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 3vw;
+    color: #070F2E;
+    text-align: center;
+}
 
-    #second-section h3 {
-        position: absolute;
-        top: -17vw;
-        left: 9vw;
-        margin: 0px;
-        display: inline;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 1.5vw;
-        color: white;
-        text-align: center;
-    }
+#second-section h2 {
+    margin: 10px;
+    top: 7.5vw;
+    left: -15vw;
+    position: relative;
+    max-width: calc(100% - 40px);
+    width: calc(100% - 40px);
+    display: inline;
+    font-family: montserrat, sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 2vw;
+    color: #070F2E;
+    text-align: center;
+}
 
 
-    #second-section p {
-        position: relative;
-        top: -5vw;
-        left: 11vw;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 400;
-        max-width: 70vw;
-        width: 70vw;
-        font-style: normal;
-        font-size: 1.5vw;
-        color: white;
-        padding: 1vw;
-        z-index: 1;
-        background-color: #48667E;
-    }
+#second-section p {
+    position: relative;
+    padding-top: 5.5vw;
+    left: 1vw;
+    font-family: sofia-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    max-width: 50vw;
+    width: 50vw;
+    font-size: .8vw;
+    color: #1f2630;
+    text-align: center;
+}
 
-     #second-section .shape {
-        position: absolute;
-        left: 2.5vw;
-        top: 6vw;
-        height: 75%;
-        width: 95%;
-        background-color: #070F2E;
-        border-radius: 0px;
-        margin-bottom: 10px;
-        margin-right: 20px;
-    }
+#second-section .bordertext {
+    display: table;
+    position: relative;
+    top: 1vw;
+    left: 3vw;
+    bottom: 0vw;
+}
 
 #intern-section {
         background-color: #070F2E;
