--- a/committee/apo.html
+++ b/committee/apo.html
@@ -511,7 +511,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -565,12 +565,12 @@
 
     .jacob p { 
         margin: 50px;
-        padding-top: 45vw;
+        padding-top: 50vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 73px;
@@ -629,7 +629,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -688,7 +688,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -703,7 +703,7 @@
         right: 50%;
         transform: translate(50%, -50%);
         margin: 0;
-        width: 140%;
+        width: 40vw;
         word-wrap: break-word;
     }
 
