--- a/committee/ce.html
+++ b/committee/ce.html
@@ -251,7 +251,7 @@
     #second-section h2 {
         
         top: -20vw;
-        left: 12vw;
+        left: 23vw;
         position: relative;
         max-width: calc(100% - 40px);
         width: calc(100% - 40px);
@@ -270,7 +270,7 @@
     #second-section h3 {
         position: absolute;
         top: -17vw;
-        left: 15vw;
+        left: 26vw;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
@@ -345,7 +345,7 @@
         margin-top: 10px;
         margin-bottom: 10vw;
         width: 60%;
-        left: 15%;
+        left: 13%;
         top: -10%;
         
     }
@@ -417,7 +417,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 1.2vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -478,7 +478,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 1.2vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -533,11 +533,11 @@
     .zach p { 
         margin: 50px;
         padding-top: 38vw;
-        padding-left: 3vw;
+        padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 1.2vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -552,7 +552,7 @@
         right: 50%;
         transform: translate(50%, -50%);
         margin: 0;
-        width: 140%;
+        width: 30vw;
         word-wrap: break-word;
     }
 
