--- a/committee/ej.html
+++ b/committee/ej.html
@@ -319,7 +319,7 @@
     #second-section h2 {
         
         top: -20vw;
-        left: 12vw;
+        left: 22vw;
         position: relative;
         max-width: calc(100% - 40px);
         width: calc(100% - 40px);
@@ -338,7 +338,7 @@
     #second-section h3 {
         position: absolute;
         top: -17vw;
-        left: 15vw;
+        left: 25vw;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
@@ -486,7 +486,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -542,12 +542,12 @@
 
     .sydney p { 
         margin: 50px;
-        padding-top: 40vw;
+        padding-top: 45vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -606,7 +606,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -621,7 +621,7 @@
         right: 50%;
         transform: translate(50%, -50%);
         margin: 0;
-        width: 140%;
+        width: 30vw;
         word-wrap: break-word;
     }
 
