--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -334,7 +334,7 @@
     #second-section h2 {
         
         top: -20vw;
-        left: 12vw;
+        left: 20vw;
         position: relative;
         max-width: calc(100% - 40px);
         width: calc(100% - 40px);
@@ -353,7 +353,7 @@
     #second-section h3 {
         position: absolute;
         top: -17vw;
-        left: 15vw;
+        left: 22vw;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
@@ -386,7 +386,7 @@
      #second-section .shape {
         position: absolute;
         left: 2.5vw;
-        height: 80%;
+        height: 75%;
         width: 95%;
         background-color: #070F2E;
         border-radius: 0px;
@@ -428,7 +428,7 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 15vw;
+        margin-bottom: 20vw;
         width: 45%;
         left: 25%;
         top: -10%;
@@ -501,7 +501,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -560,7 +560,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -619,7 +619,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -677,7 +677,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -692,7 +692,7 @@
         right: 50%;
         transform: translate(50%, -50%);
         margin: 0;
-        width: 140%;
+        width: 40vw;
         word-wrap: break-word;
     }
 
