--- a/committee/tech.html
+++ b/committee/tech.html
@@ -87,6 +87,7 @@
             <a href="#" class="sixth brandii"> 
                 <img src="tech/brandii-warden-pfp.png"/> 
                 <h2>Brandii Warden</h2> 
+                <h3>Administrator</h3>
                 <p>
                 Brandii is a sophomore pursuing a major in Computer Science and minors in African American Studies and Data Science. She is a technology associate for the Technology Committee within the Office of ASUC Senator Chaka Tellem, aiming to help create a more welcoming and unified campus for underrepresented communities. She is passionate about tackling racial inequity and inequality in technology, specifically in both the level of inclusivity in the tech industry, as well as in algorithm bias/oppression. She is most excited about topics in machine learning and artificial intelligence. Brandii also loves going on hikes, doing yoga, and watching documentaries on Netflix.
                 </p>
@@ -94,7 +95,8 @@
 
             <a href="#" class="sixth gianna"> <!-- rename -->
                 <img src="tech/gianna-beasley-pfp.png"/> 
-                <h2>Gianna Beasley</h2> 
+                <h2>Gianna Beasley</h2>
+                <h3>Administrator</h3> 
                 <p>
                 Gianna Beasley is a Tech Committee Associate for ASUC Senator Chaka Tellem’s office. She is a freshman who intends on either majoring in Psychology or Business. Specializing in both the 400m and 800m, Gianna is a part of the Track & Field team here at Berkeley. She is from South Pasadena, California and loves the SoCal weather. Gianna is passionate about forensic psychology and one day hopes to be a practicing Forensic Psychologist. In her free time, she can be found watching Criminal Minds, Forensic Files, or simply listening to a true crime podcast. She also considers herself to be a poké enthusiast, and enjoys trying new poké places when exploring new cities. Gianna loves meeting new people, and is excited to do so here at Berkeley.
                 </p> 
@@ -103,6 +105,7 @@
             <a href="#" class="sixth ines"> 
                 <img src="tech/ines-yang-pfp.png"/> 
                 <h2>Ines Yang</h2>
+                <h3>Administrator</h3>
                 <p>
                 I’m Ines, and my major is Sustainable Environmental Design. I’m really into embrodiering and currently experimenting with digital art/ graphic design in my free time. I joined Senator Tellem’s office because I wanted to expand my awareness and use my skills for something bigger than myself. I think there is something powerful in creating art that can communicate ideas to others. I’m currently learning Adobe Illustrator and Photoshop, and I hope to elevate our social media platform and presence in the future through short animations or even movies!
                 </p> 
@@ -307,6 +310,7 @@
         padding: 0vw;
         width: 30%;
         left: 40vw;
+        top: 3vw;
         height: auto;
     }
 
@@ -319,7 +323,7 @@
     #second-section h2 {
         
         top: -20vw;
-        left: 12vw;
+        left: 17vw;
         position: relative;
         max-width: calc(100% - 40px);
         width: calc(100% - 40px);
@@ -338,7 +342,7 @@
     #second-section h3 {
         position: absolute;
         top: -17vw;
-        left: 15vw;
+        left: 20vw;
         margin: 0px;
         display: inline;
         font-family: sofia-pro, sans-serif;
@@ -352,7 +356,7 @@
 
     #second-section p {
         position: relative;
-        top: -7vw;
+        top: -4vw;
         left: 11vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
@@ -482,12 +486,12 @@
 
     .gianna p {
         margin: 50px;
-        padding-top: 50vw;
+        padding-top: 55vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 1.2vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -542,12 +546,12 @@
 
     .brandii p { 
         margin: 50px;
-        padding-top: 45vw;
+        padding-top: 50vw;
         padding-left: 6vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 1.2vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -601,12 +605,12 @@
 
     .ines p {
         margin: 50px;
-        padding-top: 40vw;
+        padding-top: 45vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 1.2vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -622,7 +626,7 @@
         right: 50%;
         transform: translate(50%, -50%);
         margin: 0;
-        width: 140%;
+        width: 30vw;
         word-wrap: break-word;
     }
 
