--- a/committee/cc.html
+++ b/committee/cc.html
@@ -532,7 +532,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -591,7 +591,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -650,7 +650,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -708,7 +708,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -767,7 +767,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1vw;
+        font-size: 1.25vw;
         color: white;
         text-align: center;
         padding-bottom: 63px;
@@ -783,7 +783,7 @@
         right: 50%;
         transform: translate(50%, -50%);
         margin: 0;
-        width: 140%;
+        width: 40vw;
         word-wrap: break-word;
     }
 
