--- a/committee/apo.html
+++ b/committee/apo.html
@@ -12,7 +12,7 @@
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="../index.html">Home</a>
-        <a href="../meetchaka.html">Meet Chaka</a>
+        <!-- <a href="../meetchaka.html">Meet Chaka</a> -->
         <a href="../chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
@@ -96,12 +96,13 @@
                 </p>
             </a>
 
-            <a href="#" class="sixth jacob"> 
-                <img src="../profiles/jacob_outline.png"/> 
-                <h2>Jacob Williams</h2>
+            <a href="#" class="sixth alfonse">
+                <img src="../profiles/alfonse_outline.png"/> 
+                <h2>Alfonse Dalcour</h2>
                 <h3> Administrator </h3>
                 <p>
-                    Jacob Williams is a first-year studying MCB Neurobiology and Cognitive Science, currently serving as the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. As a Bay Area native, Jacob attended Oakland School for the Arts before becoming a Shelby Davis Scholar and representing the United States at the United World College in Mostar, Bosnia and Herzegovina where he completed the IB Diploma before coming to Cal. Abroad, Jacob found his passion for public justice while volunteering in a post-war conflict zone as well as an underlying theme of academic study in STEM which aided his ability to positively impact lives within the local community and the Balkan region. At Cal, Jacob hopes to bring his passion for STEM to his studies in Pre-Med and eventually pursue Medical School. In his free time, he likes to travel, dance, have deep-conversations about the randomest topics, and explore the unknown. </p> 
+                    Alfonse Dalcour is a sophomore who is an intended Business Administration major serving as the Pre-Business Administrator in the APO Department. While deciding what he wanted to major in he realized he knew he wanted to do business, but he wasn’t sure what that exactly meant. Alfonse wants to help others like himself who are in the process of figuring out what their path is. He devotes a lot of his energy into doing things that help him relax. In his free time he likes to work out, play the video game, or sleep. 
+                </p> 
             </a>
 
             <a href="#" class="sixth isha">
@@ -114,13 +115,12 @@
                 </p> 
             </a>
 
-            <a href="#" class="sixth alfonse">
-                <img src="../profiles/alfonse_outline.png"/> 
-                <h2>Alfonse Dalcour</h2>
+            <a href="#" class="sixth jacob"> 
+                <img src="../profiles/jacob_outline.png"/> 
+                <h2>Jacob Williams</h2>
                 <h3> Administrator </h3>
                 <p>
-                    Alfonse Dalcour is a sophomore who is an intended Business Administration major serving as the Pre-Business Administrator in the APO Department. While deciding what he wanted to major in he realized he knew he wanted to do business, but he wasn’t sure what that exactly meant. Alfonse wants to help others like himself who are in the process of figuring out what their path is. He devotes a lot of his energy into doing things that help him relax. In his free time he likes to work out, play the video game, or sleep. 
-                </p> 
+                    Jacob Williams is a first-year studying MCB Neurobiology and Cognitive Science, currently serving as the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. As a Bay Area native, Jacob attended Oakland School for the Arts before becoming a Shelby Davis Scholar and representing the United States at the United World College in Mostar, Bosnia and Herzegovina where he completed the IB Diploma before coming to Cal. Abroad, Jacob found his passion for public justice while volunteering in a post-war conflict zone as well as an underlying theme of academic study in STEM which aided his ability to positively impact lives within the local community and the Balkan region. At Cal, Jacob hopes to bring his passion for STEM to his studies in Pre-Med and eventually pursue Medical School. In his free time, he likes to travel, dance, have deep-conversations about the randomest topics, and explore the unknown. </p> 
             </a>
         </div>
     </div>
@@ -438,7 +438,7 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 0vw;
-        margin-bottom: 25vw;
+        margin-bottom: 20vw;
         width: 45%;
         left: 29%;
         top: -10%;
@@ -506,7 +506,7 @@
 
     .kalliope p { 
         margin: 50px;
-        padding-top: 45vw;
+        padding-top: 40vw;
         padding-left: 7vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
@@ -683,7 +683,7 @@
 
     .alfonse p { 
         margin: 50px;
-        padding-top: 40vw;
+        padding-top: 38vw;
         padding-left: 8vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
@@ -725,7 +725,7 @@
     }
 
     #intern-section h2 {
-        top: 10vw;
+        top: 8vw;
         left: 6vw;
         position: absolute;
         display: block;
