--- a/committee/ce.html
+++ b/committee/ce.html
@@ -13,7 +13,7 @@
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="../index.html">Home</a>
-        <a href="../meetchaka.html">Meet Chaka</a>
+        <!-- <a href="../meetchaka.html">Meet Chaka</a> -->
         <a href="../chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
@@ -412,7 +412,7 @@
 
     .jason p {
         margin: 50px;
-        padding-top: 38vw;
+        padding-top: 44vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
@@ -473,7 +473,7 @@
 
     .bianca p { 
         margin: 50px;
-        padding-top: 35vw;
+        padding-top: 41vw;
         padding-left: 6vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
@@ -490,7 +490,7 @@
         background-color: #070F2E;
         padding-top: 8vw;
         padding-bottom: 0px;
-        padding-right: 1vw;
+        padding-right: 2vw;
         padding-left: 3vw;
     }
 
@@ -532,7 +532,7 @@
 
     .zach p { 
         margin: 50px;
-        padding-top: 38vw;
+        padding-top: 43vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
@@ -574,7 +574,7 @@
     }
 
     #intern-section h2 {
-        top: 13vw;
+        top: 7vw;
         left: 6vw;
         position: absolute;
         display: block;
