--- a/committee/tech.html
+++ b/committee/tech.html
@@ -13,7 +13,7 @@
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="../index.html">Home</a>
-        <a href="../meetchaka.html">Meet Chaka</a>
+        <!-- <a href="../meetchaka.html">Meet Chaka</a> -->
         <a href="../chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
@@ -70,7 +70,7 @@
     <div id="second-section">
         <div class="shape"></div>
         <div class="inner">
-            <img src="tech/sage-pierone-pfp.png" align="LEFT" class="imgresponsive"/> 
+            <img src="../profiles/sage_outline.png" align="LEFT" class="imgresponsive"/> 
             <div class="bordertext">
                 <h2>Sage Pierone</h2>
                 <h3>Committee Chair</h3><p style="font-size:1.75vw;">Sage Pierone is a sophomore studying Computer Science with a minor in Race and Law. He is from Los Angeles and is a LA Posse scholar, which is where he and Chaka first met. He hopes to work in the computer science field with a focus on race and equality, and has a passion for artificial intelligence and dismantling data bias in machine learning. In his free time, he can be found on the soccer field, skateboarding, or playing Super Smash Bros Ultimate.</p>
@@ -85,7 +85,7 @@
         </div>
         <div class="associates">
             <a href="#" class="sixth brandii"> 
-                <img src="tech/brandii-warden-pfp.png"/> 
+                <img src="../profiles/brandii_outline.png"/> 
                 <h2>Brandii Warden</h2> 
                 <h3>Administrator</h3>
                 <p>
@@ -94,7 +94,7 @@
             </a>
 
             <a href="#" class="sixth gianna"> <!-- rename -->
-                <img src="tech/gianna-beasley-pfp.png"/> 
+                <img src="../profiles/gianna_outline.png"/> 
                 <h2>Gianna Beasley</h2>
                 <h3>Administrator</h3> 
                 <p>
@@ -103,7 +103,7 @@
             </a>
 
             <a href="#" class="sixth ines"> 
-                <img src="tech/ines-yang-pfp.png"/> 
+                <img src="../profiles/ines_outline.png"/> 
                 <h2>Ines Yang</h2>
                 <h3>Administrator</h3>
                 <p>
@@ -115,7 +115,7 @@
 
     <div id="intern-section">
         <div class="intern">
-            <img src="tech/alex-parra-pfp.png" align="CENTER" class="internresponsive"/>
+            <img src="../profiles/alex_outline.png" align="CENTER" class="internresponsive"/>
             <h2>TECH Intern</h2> 
             <h3>Alex Parra</h3> 
             <p>Alex Parra is a freshman studying Computer Science, with a possible minor in Chicano Studies. Coming from LA, Alex is excited to work towards equality for all. As a Mexican American, Alex is deeply invested in ensuring the Latine community is represented in the ASUC through social media and beyond. You can usually catch Alex taking photos on campus, running around Berkeley or sleeping during lecture.</p> 
@@ -618,6 +618,8 @@
         background-clip: content-box;
         
     }
+
+    
 
     .sixth p {
         display: inline;
