--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="topnav" id="myTopnav">
         <img href="index.html" class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="index.html" class="active">Home</a>
-        <a href="meetchaka.html">Meet Chaka</a>
+        <!-- <a href="meetchaka.html">Meet Chaka</a> -->
         <a href="chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
@@ -52,7 +52,7 @@
 
     <div id="first-section">
         <h2>Meet ASUC Senator Tellem's Office!</h2>
-        <img class="chaka-img" src="committee/groupphoto.png" />
+        <img class="chaka-img" src="committee/groupphoto.png"/>
     </div>
 
     <div id="second-section">
