--- a/meetchaka.html
+++ b/meetchaka.html
@@ -108,6 +108,7 @@
   font-family: sofia-pro, sans-serif;
   padding-top: 10px;
   padding-left: 10px;
+  padding-bottom: 5px;
 }
 
 .topnav a {
@@ -181,7 +182,7 @@
 
     #intro-section {
         position: relative;
-        background-color: #243854;
+        background-color: #051630;
         width: 100%;
         height: auto;
         overflow: auto;
@@ -196,7 +197,7 @@
         width: 40vw;
         display: block;
         font-family: sofia-pro, sans-serif;
-        font-weight: 400;
+        font-weight: 600;
         font-style: normal;
         padding-top: 7vw;
         padding-left: 1vw;
