--- a/chiefofstaff.html
+++ b/chiefofstaff.html
@@ -11,7 +11,7 @@
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="index.html">Home</a>
-        <a href="meetchaka.html">Meet Chaka</a>
+        <!-- <a href="meetchaka.html">Meet Chaka</a> -->
         <a href="chiefofstaff.html" class="active">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
