--- a/committee/ej.html
+++ b/committee/ej.html
@@ -13,7 +13,7 @@
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="../index.html">Home</a>
-        <a href="../meetchaka.html">Meet Chaka</a>
+        <!-- <a href="../meetchaka.html">Meet Chaka</a> -->
         <a href="../chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
