--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -13,7 +13,7 @@
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <a href="../index.html">Home</a>
-        <a href="../meetchaka.html">Meet Chaka</a>
+        <!-- <a href="../meetchaka.html">Meet Chaka</a> -->
         <a href="../chiefofstaff.html">Chief of Staff</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
@@ -428,7 +428,7 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 20vw;
+        margin-bottom: 17vw;
         width: 45%;
         left: 25%;
         top: -10%;
