--- a/committee/cc.html
+++ b/committee/cc.html
@@ -87,7 +87,7 @@
             <a href="#" class="sixth jay">
                 <h2>Jay Kim-Turner</h2>
                 <h3>Administrator</h3>
-                <img src="../profiles/sydneyroberts_outline.png"/> 
+                <img src="../profiles/jay_outline.png"/> 
                 
                 <p>
                     Jay is a sophomore majoring in political science and economics. He believes in the philosophy that UC Berkeley is a family — where no one is forgotten or left behind. Jay believes working with Senator Tellem will create opportunities for not just current students, but future generations to come. No matter a Golden Bears’ background, everyone is entitled to have their voices heard and an institution that serves them, not itself. In Jay’s spare time, he enjoys watching and playing sports, exercising, watching various types of film and television shows, and getting involved in the Masked Heroes Initiative, an organization he created that gives back to frontline heroes of the COVID-19 pandemic. 
@@ -470,7 +470,7 @@
 
 
     #third-section img {
-        width: 80%;
+        width: 100%;
         margin: 0%;
         height: auto;
 
@@ -588,7 +588,7 @@
 
     .NanaAma p { 
         margin: 50px;
-        padding-top: 45vw;
+        padding-top: 55vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
@@ -647,7 +647,7 @@
 
     .brandon p {
         margin: 50px;
-        padding-top: 35vw;
+        padding-top: 45vw;
         padding-left: 7vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
@@ -662,7 +662,7 @@
     }
     .wesley img {
         background-color: #070F2E;
-        padding: 5vw;
+        padding: 0vw;
         padding-bottom: 0px;
         padding-right: 1vw;
         padding-left: 2vw;
@@ -705,7 +705,7 @@
 
     .wesley p {
         margin: 50px;
-        padding-top: 35vw;
+        padding-top: 36vw;
         padding-left: 7vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
@@ -764,7 +764,7 @@
 
     .makena p {
         margin: 50px;
-        padding-top: 35vw;
+        padding-top: 40vw;
         padding-left: 7vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
@@ -827,8 +827,8 @@
         border-radius: 10%;
         margin-top: 10px;
         margin-bottom: 200px;
-        width: 60%;
-        left: 25%;
+        width: 55%;
+        left: 30%;
         
     }
 
