--- a/chiefofstaff.html
+++ b/chiefofstaff.html
@@ -352,11 +352,11 @@
 
     .ian p { 
         margin: 30px;
-        padding-top: 610px;
+        padding-top: 710px;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: .64em;
+        font-size: 0.8em;
         color: #fcf6f2;
         text-align: center;
         padding-bottom: 63px;
@@ -377,11 +377,11 @@
 
     .avani p {
         margin: 30px;
-        padding-top: 640px;
+        padding-top: 740px;
         font-family: sofia-pro, sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: .64em;
+        font-size: 0.8em;
         color: #fcf6f2;
         text-align: center;
         padding-bottom: 63px;
