--- a/committee/tech.html
+++ b/committee/tech.html
@@ -103,7 +103,7 @@
             </a>
 
             <a href="#" class="sixth ines"> 
-                <img src="../profiles/ines_outline.png"/> 
+                <img src="../profiles/ines_outline.PNG"/> 
                 <h2>Ines Yang</h2>
                 <h3>Administrator</h3>
                 <p>
